--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,11 @@
 cmake_minimum_required(VERSION 3.26)
-project(seperategames)
+project(mad2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(seperategames main.cpp
-        board.h
-        player.h
-        managegame.h
-        four_in_row_board.h
-        numerical_tic_tac_toe_board.h
-        "Ultimate Tic Tac Toe .h"
-        Tic_tac_toe5_board.h)
+add_executable(mad2 main.cpp
+        BoardGame_Classes.h
+        3x3X_O.h
+        Four-in-a-row.h
+        "Numerical Tic-Tac-Toe.h"
+        "Ultimate Tic Tac Toe .h")
