add the Numerical Tic-Tac-Toe.h is added and game3,6 headers are deleted

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,7 @@ add_executable(mad2 main.cpp
         BoardGame_Classes.h
         3x3X_O.h
         Four-in-a-row.h
-        "Numerical Tic-Tac-Toe.h"
-        "Ultimate Tic Tac Toe .h")
+        Numerical-Tic-Tac-Toe.h
+
+        game3.h
+)
